--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "2.18.0",
+  "version": "2.19.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -33,6 +33,7 @@
   ],
   "badges": {
     "list": [
+      "githubworkflow",
       "npmversion",
       "npmdownloads",
       "daviddm",
@@ -49,6 +50,7 @@
       "wishlist"
     ],
     "config": {
+      "githubWorkflow": "bevry",
       "githubSponsorsUsername": "balupton",
       "buymeacoffeeUsername": "balupton",
       "cryptoURL": "https://bevry.me/crypto",
@@ -147,34 +149,34 @@
     }
   },
   "dependencies": {
-    "badges": "^4.24.0",
+    "badges": "^4.26.0",
     "caterpillar": "^6.6.0",
-    "cson-parser": "^4.0.6",
-    "errlop": "^4.1.0",
-    "fellow": "^6.21.0",
-    "get-cli-arg": "^6.8.0",
+    "cson-parser": "^4.0.9",
+    "errlop": "^4.2.0",
+    "fellow": "^6.23.0",
+    "get-cli-arg": "^7.1.0",
     "spdx-expression-parse": "^3.0.1",
-    "spdx-license-list": "^6.3.0",
+    "spdx-license-list": "^6.4.0",
     "typechecker": "^7.17.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "assert-helpers": "^8.1.0",
-    "eslint": "^7.14.0",
-    "eslint-config-bevry": "^3.23.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "filedirname": "^2.4.0",
-    "kava": "^5.13.0",
-    "make-deno-edition": "^1.2.0",
-    "prettier": "^2.2.0",
-    "safeps": "^10.15.0",
-    "surge": "^0.21.7",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.1.2",
-    "valid-directory": "^3.5.0"
+    "@bevry/update-contributors": "^1.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "assert-helpers": "^8.2.0",
+    "eslint": "^7.31.0",
+    "eslint-config-bevry": "^3.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "filedirname": "^2.6.0",
+    "kava": "^5.14.0",
+    "make-deno-edition": "^1.3.0",
+    "prettier": "^2.3.2",
+    "safeps": "^10.16.0",
+    "surge": "^0.23.0",
+    "typedoc": "^0.21.4",
+    "typescript": "4.3.5",
+    "valid-directory": "^3.7.0"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
@@ -187,13 +189,13 @@
     "our:meta": "npm run our:meta:contributors && npm run our:meta:docs && npm run our:meta:projectz",
     "our:meta:contributors": "update-contributors",
     "our:meta:docs": "npm run our:meta:docs:typedoc",
-    "our:meta:docs:typedoc": "rm -Rf ./docs && typedoc --mode file --exclude '**/+(*test*|node_modules)' --excludeExternals --name \"$npm_package_name\" --readme ./README.md --out ./docs ./source",
+    "our:meta:docs:typedoc": "rm -Rf ./docs && typedoc --exclude '**/+(*test*|node_modules)' --excludeExternals --out ./docs ./source",
     "our:meta:projectz": "npx . compile",
     "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
     "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
     "our:release:check-dirty": "git diff --exit-code",
     "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
-    "our:release:push": "git push origin master && git push origin --tags",
+    "our:release:push": "git push origin && git push origin --tags",
     "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
     "our:setup": "npm run our:setup:install",
     "our:setup:install": "npm install",
