--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "2.23.0",
+  "version": "3.0.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "Artistic-2.0",
@@ -15,7 +15,7 @@
     "component",
     "component.json",
     "documentation",
-    "es2021",
+    "es2022",
     "generator",
     "jquery.json",
     "jspm",
@@ -38,6 +38,7 @@
       "npmdownloads",
       "---",
       "githubsponsors",
+      "thanksdev",
       "patreon",
       "flattr",
       "liberapay",
@@ -50,6 +51,7 @@
     "config": {
       "githubWorkflow": "bevry",
       "githubSponsorsUsername": "balupton",
+      "thanksdevGithubUsername": "balupton",
       "buymeacoffeeUsername": "balupton",
       "cryptoURL": "https://bevry.me/crypto",
       "flattrUsername": "balupton",
@@ -78,7 +80,7 @@
     "Peter C <peterkc@gmail.com> (https://github.com/peterkc)",
     "Peter Flannery (https://github.com/pflannery)",
     "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)",
-    "Shahar Dawn Or <mightyiampresence@gmail.com> (https://github.com/mightyiam)",
+    "Shahar \"Dawn\" Or <mightyiampresence@gmail.com> (https://github.com/mightyiam)",
     "Zearin (https://github.com/Zearin)",
     "Zlatan Vasović <zlatanvasovic@gmail.com> (https://github.com/zlatanvasovic)",
     "vsopvsop (https://github.com/vsopvsop)"
@@ -91,7 +93,7 @@
     "url": "https://github.com/bevry/projectz.git"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "editions": [
     {
@@ -106,32 +108,32 @@
       "engines": false
     },
     {
-      "description": "TypeScript compiled against ES2021 for Node.js with Require for modules",
-      "directory": "edition-es2021",
+      "description": "TypeScript compiled against ES2022 for Node.js with Require for modules",
+      "directory": "edition-es2022",
       "entry": "index.js",
       "tags": [
         "compiled",
         "javascript",
-        "es2021",
+        "es2022",
         "require"
       ],
       "engines": {
-        "node": "18",
+        "node": "20",
         "browsers": false
       }
     },
     {
-      "description": "TypeScript compiled against ES2021 for Node.js with Import for modules",
-      "directory": "edition-es2021-esm",
+      "description": "TypeScript compiled against ES2022 for Node.js with Import for modules",
+      "directory": "edition-es2022-esm",
       "entry": "index.js",
       "tags": [
         "compiled",
         "javascript",
-        "es2021",
+        "es2022",
         "import"
       ],
       "engines": {
-        "node": "18",
+        "node": "20",
         "browsers": false
       }
     }
@@ -139,64 +141,62 @@
   "bin": "bin.cjs",
   "types": "./compiled-types/",
   "type": "module",
-  "main": "edition-es2021/index.js",
+  "main": "edition-es2022/index.js",
   "exports": {
     "node": {
-      "import": "./edition-es2021-esm/index.js",
-      "require": "./edition-es2021/index.js"
+      "import": "./edition-es2022-esm/index.js",
+      "require": "./edition-es2022/index.js"
     }
   },
   "dependencies": {
-    "@bevry/file": "^1.2.0",
-    "@bevry/json": "^1.4.0",
-    "badges": "^4.28.0",
-    "caterpillar": "^6.8.0",
-    "fellow": "^6.24.0",
-    "get-cli-arg": "^7.3.0",
+    "@bevry/file": "^2.1.0",
+    "@bevry/json": "^1.7.0",
+    "badges": "^4.32.0",
+    "caterpillar": "^6.9.0",
+    "fellow": "^6.25.0",
+    "get-cli-arg": "^8.0.0",
     "spdx-expression-parse": "^3.0.1",
-    "spdx-license-list": "^6.6.0",
-    "typechecker": "^7.18.0"
+    "spdx-license-list": "^6.8.0",
+    "typechecker": "^8.1.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.21.0",
-    "@types/node": "^18.15.6",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "assert-helpers": "^8.4.0",
-    "eslint": "^8.36.0",
-    "eslint-config-bevry": "^3.27.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "filedirname": "^2.7.0",
-    "kava": "^5.15.0",
-    "make-deno-edition": "^1.3.0",
-    "prettier": "^2.8.6",
-    "safeps": "^10.17.0",
+    "@bevry/update-contributors": "^1.23.0",
+    "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "assert-helpers": "^11.2.0",
+    "eslint": "^8.53.0",
+    "eslint-config-bevry": "^4.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "filedirname": "^2.9.0",
+    "kava": "^7.1.0",
+    "prettier": "^3.1.0",
+    "safeps": "^11.1.0",
     "surge": "^0.23.1",
-    "typedoc": "^0.23.28",
-    "typescript": "5.0.2",
-    "valid-directory": "^3.9.0"
+    "typedoc": "^0.25.3",
+    "typescript": "5.2.2",
+    "valid-directory": "^4.1.0"
   },
   "scripts": {
     "our:bin": "node ./bin.cjs",
-    "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
-    "our:compile": "npm run our:compile:deno && npm run our:compile:edition-es2021 && npm run our:compile:edition-es2021-esm && npm run our:compile:types",
-    "our:compile:deno": "make-deno-edition --attempt",
-    "our:compile:edition-es2021": "tsc --module commonjs --target ES2021 --outDir ./edition-es2021 --project tsconfig.json && ( test ! -d edition-es2021/source || ( mv edition-es2021/source edition-temp && rm -Rf edition-es2021 && mv edition-temp edition-es2021 ) ) && echo '{\"type\": \"commonjs\"}' > edition-es2021/package.json",
-    "our:compile:edition-es2021-esm": "tsc --module ESNext --target ES2021 --outDir ./edition-es2021-esm --project tsconfig.json && ( test ! -d edition-es2021-esm/source || ( mv edition-es2021-esm/source edition-temp && rm -Rf edition-es2021-esm && mv edition-temp edition-es2021-esm ) ) && echo '{\"type\": \"module\"}' > edition-es2021-esm/package.json",
-    "our:compile:types": "tsc --project tsconfig.json --emitDeclarationOnly --declaration --declarationMap --declarationDir ./compiled-types && ( test ! -d compiled-types/source || ( mv compiled-types/source edition-temp && rm -Rf compiled-types && mv edition-temp compiled-types ) )",
-    "our:deploy": "echo no need for this project",
+    "our:clean": "rm -rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
+    "our:compile": "npm run our:compile:edition-es2022 && npm run our:compile:edition-es2022-esm && npm run our:compile:types",
+    "our:compile:edition-es2022": "tsc --module commonjs --target ES2022 --outDir ./edition-es2022 --project tsconfig.json && ( test ! -d edition-es2022/source || ( mv edition-es2022/source edition-temp && rm -rf edition-es2022 && mv edition-temp edition-es2022 ) ) && printf '%s' '{\"type\": \"commonjs\"}' > edition-es2022/package.json",
+    "our:compile:edition-es2022-esm": "tsc --module ESNext --target ES2022 --outDir ./edition-es2022-esm --project tsconfig.json && ( test ! -d edition-es2022-esm/source || ( mv edition-es2022-esm/source edition-temp && rm -rf edition-es2022-esm && mv edition-temp edition-es2022-esm ) ) && printf '%s' '{\"type\": \"module\"}' > edition-es2022-esm/package.json",
+    "our:compile:types": "tsc --project tsconfig.json --emitDeclarationOnly --declaration --declarationMap --declarationDir ./compiled-types && ( test ! -d compiled-types/source || ( mv compiled-types/source edition-temp && rm -rf compiled-types && mv edition-temp compiled-types ) )",
+    "our:deploy": "printf '%s\n' 'no need for this project'",
     "our:meta": "npm run our:meta:contributors && npm run our:meta:docs && npm run our:meta:projectz",
     "our:meta:contributors": "update-contributors",
     "our:meta:docs": "npm run our:meta:docs:typedoc",
-    "our:meta:docs:typedoc": "rm -Rf ./docs && typedoc --exclude '**/+(*test*|node_modules)' --excludeExternals --out ./docs ./source",
+    "our:meta:docs:typedoc": "rm -rf ./docs && typedoc --exclude '**/+(*test*|node_modules)' --excludeExternals --out ./docs ./source",
     "our:meta:projectz": "npm run our:bin -- compile",
     "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
-    "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
+    "our:release:check-changelog": "cat ./HISTORY.md | grep \"v$npm_package_version\" || (printf '%s\n' \"add a changelog entry for v$npm_package_version\" && exit -1)",
     "our:release:check-dirty": "git diff --exit-code",
     "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
     "our:release:push": "git push origin && git push origin --tags",
-    "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
+    "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (printf '%s\n' 'proper changelog entry not found' && exit -1) && git tag \"v$npm_package_version\" -am \"$MESSAGE\"",
     "our:setup": "npm run our:setup:install",
     "our:setup:install": "npm install",
     "our:test": "npm run our:verify && npm test",
@@ -204,7 +204,7 @@
     "our:verify:directory": "valid-directory",
     "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
     "our:verify:prettier": "prettier --write .",
-    "test": "node ./edition-es2021/test.js"
+    "test": "node ./edition-es2022/test.js"
   },
   "eslintConfig": {
     "extends": [
@@ -213,7 +213,8 @@
   },
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "trailingComma": "all"
   },
   "boundation": {
     "desiredNodeOnly": true
