--- a/.github/workflows/bevry.yml
+++ b/.github/workflows/bevry.yml
@@ -8,9 +8,12 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+          - macos-latest
+          - windows-latest
         node:
           - '20'
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ contains('macos-latest windows-latest', matrix.os) }}
     steps:
       - uses: actions/checkout@v4
       - name: Install desired Node.js version
@@ -34,6 +37,8 @@ jobs:
           printf '%s' 'node: ' && node --version && printf '%s' 'npm: ' && npm
           --version && node -e 'console.log(process.versions)'
       - run: npm test
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   publish:
     if: ${{ github.event_name == 'push' }}
     needs: test
