--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "3.4.0",
+  "version": "4.0.0",
+  "license": "Artistic-2.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
-  "license": "Artistic-2.0",
+  "funding": "https://bevry.me/fund",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bevry/projectz.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bevry/projectz/issues"
+  },
   "keywords": [
     "badges",
     "bower",
@@ -70,32 +78,50 @@
       "npmPackageName": "projectz"
     }
   },
-  "funding": "https://bevry.me/fund",
-  "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
+  "author": "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton)",
+  "authors": [
+    "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton): Benjamin furthers the humanities and the commons using the monikers balupton and @bevry"
+  ],
   "maintainers": [
-    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
-    "James George <jamesgeorge998001@gmail.com> (https://github.com/jamesgeorge007)",
-    "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)"
+    "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton): Benjamin furthers the humanities and the commons using the monikers balupton and @bevry"
   ],
   "contributors": [
-    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
+    "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton)",
     "James George <jamesgeorge998001@gmail.com> (https://github.com/jamesgeorge007)",
-    "Oliver Lorenz (https://github.com/oliverlorenz)",
-    "Peter C <peterkc@gmail.com> (https://github.com/peterkc)",
+    "Oliver Lorenz (https://www.oliverlorenz.com) (https://github.com/oliverlorenz)",
+    "Peter C <peterkc@gmail.com> (https://www.linkedin.com/in/peterkc1/) (https://github.com/peterkc)",
     "Peter Flannery (https://github.com/pflannery)",
-    "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)",
+    "Rob Loach <robloach@gmail.com> (https://robloach.net) (https://github.com/RobLoach)",
     "Shahar \"Dawn\" Or <mightyiampresence@gmail.com> (https://github.com/mightyiam)",
+    "vsopvsop (https://github.com/vsopvsop)",
     "Zearin (https://github.com/Zearin)",
-    "Zlatan Vasović <zlatanvasovic@gmail.com> (https://github.com/zlatanvasovic)",
-    "vsopvsop (https://github.com/vsopvsop)"
+    "Zlatan Vasović <zlatanvasovic@gmail.com> (https://github.com/zlatanvasovic)"
   ],
-  "bugs": {
-    "url": "https://github.com/bevry/projectz/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bevry/projectz.git"
-  },
+  "sponsors": [
+    "Andrew Nesbitt (https://nesbitt.io) (https://github.com/andrew): Software engineer and researcher",
+    "Balsa <hello@balsa.com> (https://balsa.com) (https://github.com/balsa): We're Balsa, and we're building tools for builders.",
+    "Codecov <hello-codecov@sentry.io> (https://codecov.io/) (https://github.com/codecov): Empower developers with tools to improve code quality and testing.",
+    "Poonacha Medappa (https://poonachamedappa.com) (https://github.com/km-Poonacha)",
+    "Rob Morris <rob@prismatik.com.au> (https://github.com/Rob-Morris)",
+    "Sentry (https://sentry.io) (https://github.com/getsentry): Real-time crash reporting for your web apps, mobile apps, and games.",
+    "Syntax <scott@syntax.fm> (https://syntax.fm) (https://github.com/syntaxfm): Syntax Podcast"
+  ],
+  "donors": [
+    "Andrew Nesbitt (https://nesbitt.io) (https://github.com/andrew)",
+    "Balsa <hello@balsa.com> (https://balsa.com) (https://github.com/balsa)",
+    "Chad (https://opencollective.com/chad8)",
+    "Codecov <hello-codecov@sentry.io> (https://codecov.io/) (https://github.com/codecov)",
+    "entroniq (https://gitlab.com/entroniq) (https://thanks.dev/d/gl/entroniq)",
+    "Jean-Luc Geering (https://github.com/jlgeering) (https://opencollective.com/jlgeering) (https://twitter.com/jlgeering)",
+    "Michael Duane Mooring (https://mdm.cc) (https://github.com/mikeumus) (https://opencollective.com/mikeumus) (https://twitter.com/mikeumus)",
+    "Mohammed Shah <shah@idk.uno> (https://github.com/smashah) (https://thanks.dev/d/gh/smashah) (https://twitter.com/smashah)",
+    "Poonacha Medappa (https://poonachamedappa.com) (https://github.com/km-Poonacha)",
+    "Rob Morris <rob@prismatik.com.au> (https://github.com/Rob-Morris)",
+    "Sentry (https://sentry.io) (https://github.com/getsentry)",
+    "ServieJS (https://github.com/serviejs) (https://thanks.dev/d/gh/serviejs)",
+    "Skunk Team (https://skunk.team) (https://github.com/skunkteam)",
+    "Syntax <scott@syntax.fm> (https://syntax.fm) (https://github.com/syntaxfm)"
+  ],
   "engines": {
     "node": ">=20"
   },
@@ -112,7 +138,7 @@
       "engines": false
     },
     {
-      "description": "TypeScript compiled against ES2022 for Node.js with Require for modules",
+      "description": "TypeScript compiled against ES2022 for Node.js 20 with Require for modules",
       "directory": "edition-es2022",
       "entry": "index.js",
       "tags": [
@@ -127,7 +153,7 @@
       }
     },
     {
-      "description": "TypeScript compiled against ES2022 for Node.js with Import for modules",
+      "description": "TypeScript compiled against ES2022 for Node.js 20 with Import for modules",
       "directory": "edition-es2022-esm",
       "entry": "index.js",
       "tags": [
@@ -165,36 +191,37 @@
     }
   },
   "dependencies": {
-    "@bevry/fs-list": "^2.3.0",
-    "@bevry/fs-read": "^1.3.0",
-    "@bevry/fs-write": "^1.3.0",
-    "@bevry/json": "^2.1.0",
-    "badges": "^4.37.0",
-    "caterpillar": "^7.0.0",
-    "fellow": "^6.25.0",
-    "get-cli-arg": "^8.3.0",
+    "@bevry/argument": "^1.0.0",
+    "@bevry/fs-list": "^2.4.0",
+    "@bevry/fs-read": "^1.4.0",
+    "@bevry/fs-write": "^1.4.0",
+    "@bevry/github-api": "^11.0.0",
+    "@bevry/json": "^2.2.1",
+    "@bevry/render": "^1.0.0",
+    "arrange-package-json": "^5.0.2",
+    "badges": "^4.38.0",
+    "caterpillar": "^8.0.0",
     "spdx-expression-parse": "^4.0.0",
     "spdx-license-list": "^6.8.0",
-    "typechecker": "^8.5.0"
+    "trim-empty-keys": "^1.0.1",
+    "typechecker": "^9.2.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.23.0",
-    "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "assert-helpers": "^11.6.0",
-    "eslint": "^8.54.0",
-    "eslint-config-bevry": "^5.2.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "filedirname": "^3.1.0",
-    "kava": "^7.4.0",
-    "prettier": "^3.1.0",
-    "safeps": "^11.3.0",
-    "surge": "^0.23.1",
-    "typedoc": "^0.25.3",
-    "typescript": "5.2.2",
-    "valid-directory": "^4.5.0"
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "assert-helpers": "^11.10.0",
+    "eslint": "^8.56.0",
+    "eslint-config-bevry": "^5.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "filedirname": "^3.2.0",
+    "kava": "^7.5.0",
+    "prettier": "^3.1.1",
+    "safeps": "^11.4.0",
+    "typedoc": "^0.25.4",
+    "typescript": "5.3.3",
+    "valid-directory": "^4.7.0"
   },
   "scripts": {
     "our:bin": "node ./bin.cjs",
@@ -204,11 +231,10 @@
     "our:compile:edition-es2022-esm": "tsc --module ESNext --target ES2022 --outDir ./edition-es2022-esm --project tsconfig.json && ( test ! -d edition-es2022-esm/source || ( mv edition-es2022-esm/source edition-temp && rm -rf edition-es2022-esm && mv edition-temp edition-es2022-esm ) ) && printf '%s' '{\"type\": \"module\"}' > edition-es2022-esm/package.json",
     "our:compile:edition-types": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir ./edition-types --project tsconfig.json && ( test ! -d edition-types/source || ( mv edition-types/source edition-temp && rm -rf edition-types && mv edition-temp edition-types ) )",
     "our:deploy": "printf '%s\n' 'no need for this project'",
-    "our:meta": "npm run our:meta:contributors && npm run our:meta:docs && npm run our:meta:projectz",
-    "our:meta:contributors": "update-contributors",
+    "our:meta": "npm run our:meta:docs && npm run our:meta:projectz",
     "our:meta:docs": "npm run our:meta:docs:typedoc",
     "our:meta:docs:typedoc": "rm -rf ./docs && typedoc --exclude '**/+(*test*|node_modules)' --excludeExternals --out ./docs ./source",
-    "our:meta:projectz": "npm run our:bin -- compile",
+    "our:meta:projectz": "npm run our:bin",
     "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
     "our:release:check-changelog": "cat ./HISTORY.md | grep \"v$npm_package_version\" || (printf '%s\n' \"add a changelog entry for v$npm_package_version\" && exit -1)",
     "our:release:check-dirty": "git diff --exit-code",
@@ -218,11 +244,16 @@
     "our:setup": "npm run our:setup:install",
     "our:setup:install": "npm install",
     "our:test": "npm run our:verify && npm test",
-    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:prettier",
-    "our:verify:directory": "valid-directory",
+    "our:verify": "npm run our:verify:eslint && npm run our:verify:prettier",
     "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
     "our:verify:prettier": "prettier --write .",
     "test": "node ./edition-es2022/test.js"
+  },
+  "boundation": {
+    "desiredNodeOnly": true,
+    "githubActionTestEnv": {
+      "GITHUB_TOKEN": "${{ secrets.GITHUB_TOKEN }}"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -232,10 +263,8 @@
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "all"
-  },
-  "boundation": {
-    "desiredNodeOnly": true
+    "trailingComma": "all",
+    "endOfLine": "lf"
   },
   "testen": {
     "serial": true
