--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "license": "Artistic-2.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
@@ -80,10 +80,10 @@
   },
   "author": "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton)",
   "authors": [
-    "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton): Benjamin furthers the humanities and the commons using the monikers balupton and @bevry"
+    "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton): Accelerating collaborative wisdom."
   ],
   "maintainers": [
-    "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton): Benjamin furthers the humanities and the commons using the monikers balupton and @bevry"
+    "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton): Accelerating collaborative wisdom."
   ],
   "contributors": [
     "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton)",
@@ -191,34 +191,34 @@
     }
   },
   "dependencies": {
-    "@bevry/argument": "^1.0.0",
-    "@bevry/fs-list": "^2.4.0",
-    "@bevry/fs-read": "^1.4.0",
-    "@bevry/fs-write": "^1.4.0",
-    "@bevry/github-api": "^11.0.0",
-    "@bevry/json": "^2.2.1",
-    "@bevry/render": "^1.0.0",
-    "arrange-package-json": "^5.0.2",
-    "badges": "^4.38.0",
-    "caterpillar": "^8.0.0",
+    "@bevry/argument": "^1.1.0",
+    "@bevry/fs-list": "^2.5.0",
+    "@bevry/fs-read": "^1.5.0",
+    "@bevry/fs-write": "^1.5.0",
+    "@bevry/github-api": "^11.1.0",
+    "@bevry/json": "^2.3.0",
+    "@bevry/render": "^1.1.0",
+    "arrange-package-json": "^5.1.0",
+    "badges": "^4.39.0",
+    "caterpillar": "^8.1.0",
     "spdx-expression-parse": "^4.0.0",
     "spdx-license-list": "^6.8.0",
     "trim-empty-keys": "^1.0.1",
-    "typechecker": "^9.2.0"
+    "typechecker": "^9.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
-    "assert-helpers": "^11.10.0",
+    "assert-helpers": "^11.11.0",
     "eslint": "^8.56.0",
     "eslint-config-bevry": "^5.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
-    "filedirname": "^3.2.0",
-    "kava": "^7.5.0",
+    "filedirname": "^3.3.0",
+    "kava": "^7.6.0",
     "prettier": "^3.1.1",
-    "safeps": "^11.4.0",
+    "safeps": "^11.5.0",
     "typedoc": "^0.25.4",
     "typescript": "5.3.3",
     "valid-directory": "^4.7.0"
