--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "4.1.1",
+  "version": "4.2.0",
   "license": "Artistic-2.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
@@ -88,8 +88,8 @@
   "contributors": [
     "Benjamin Lupton <b@lupton.cc> (https://balupton.com) (https://github.com/balupton)",
     "James George <jamesgeorge998001@gmail.com> (https://github.com/jamesgeorge007)",
-    "Oliver Lorenz (https://www.oliverlorenz.com) (https://github.com/oliverlorenz)",
-    "Peter C <peterkc@gmail.com> (https://www.linkedin.com/in/peterkc1) (https://github.com/peterkc)",
+    "Oliver Lorenz (https://oliverlorenz.com) (https://github.com/oliverlorenz)",
+    "Peter C <peterkc@gmail.com> (https://linkedin.com/in/peterkc1) (https://github.com/peterkc)",
     "Peter Flannery (https://github.com/pflannery)",
     "Rob Loach <robloach@gmail.com> (https://robloach.net) (https://github.com/RobLoach)",
     "Shahar \"Dawn\" Or <mightyiampresence@gmail.com> (https://github.com/mightyiam)",
@@ -123,7 +123,7 @@
     "Mohammed Shah <shah@idk.uno> (https://github.com/smashah) (https://thanks.dev/d/gh/smashah) (https://twitter.com/smashah)",
     "Mr. Henry <hello@mrhenry.be> (https://mrhenry.be) (https://github.com/mrhenry)",
     "Nermal <nermalcat69@skiff.com> (https://arjunaditya.vercel.app) (https://github.com/nermalcat69)",
-    "Pleo (https://www.pleo.io) (https://github.com/pleo-io)",
+    "Pleo (https://pleo.io) (https://github.com/pleo-io)",
     "Poonacha Medappa (https://poonachamedappa.com) (https://github.com/km-Poonacha)",
     "Rob Morris <rob@prismatik.com.au> (https://github.com/Rob-Morris)",
     "Robert de Forest <guitar.robot@gmail.com> (https://github.com/rdeforest)",
@@ -202,16 +202,16 @@
     }
   },
   "dependencies": {
-    "@bevry/argument": "^1.1.0",
-    "@bevry/fs-list": "^2.5.0",
-    "@bevry/fs-read": "^1.5.0",
-    "@bevry/fs-write": "^1.5.0",
-    "@bevry/github-api": "^11.3.1",
-    "@bevry/json": "^2.3.0",
-    "@bevry/render": "^1.1.0",
-    "arrange-package-json": "^5.1.0",
-    "badges": "^4.39.0",
-    "caterpillar": "^8.1.0",
+    "@bevry/argument": "^1.2.0",
+    "@bevry/fs-list": "^2.6.0",
+    "@bevry/fs-read": "^1.6.0",
+    "@bevry/fs-write": "^1.6.0",
+    "@bevry/github-api": "^11.3.3",
+    "@bevry/json": "^2.4.0",
+    "@bevry/render": "^1.2.0",
+    "arrange-package-json": "^5.2.0",
+    "badges": "^4.40.0",
+    "caterpillar": "^8.2.0",
     "spdx-expression-parse": "^4.0.0",
     "spdx-license-list": "^6.8.0",
     "trim-empty-keys": "^1.1.0",
@@ -221,15 +221,15 @@
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
-    "assert-helpers": "^11.11.0",
+    "assert-helpers": "^11.12.0",
     "eslint": "^8.56.0",
     "eslint-config-bevry": "^5.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
-    "filedirname": "^3.3.0",
-    "kava": "^7.6.0",
+    "filedirname": "^3.4.0",
+    "kava": "^7.8.0",
     "prettier": "^3.1.1",
-    "safeps": "^11.5.0",
+    "safeps": "^11.6.0",
     "typedoc": "^0.25.4",
     "typescript": "5.3.3",
     "valid-directory": "^4.8.0"
